# AFL_Fantasy_Pipeline

./: .gitignore  LICENSE  Makefile  README.md  afl_json_scraper.py  pyproject.toml  requirements.txt
.github/workflows/: python.yml
config/: config.yaml
data/store_json/: afl_fantasy_json_structure_2025-04-17_10-18.md  afl_fantasy_relational_schema_2025-04-17_10-20.md  coach_players.json  fantasy.afl.com.au.har  player_transfer_enhanced_longform.csv  player_transfers_by_name.csv  player_transfers_summary.csv  players.json  rounds.json  show_my.json  snapshot.json  squads.json  venues.json
data/store_json/player_stats/: 1000072.json  1000223.json  1000864.json  1000953.json  1000963.json  1000972.json  1000978.json  1000980.json  1000981.json  1000998.json  1001017.json  1001026.json  1001028.json  1001299.json  1001396.json  (+439 more)
notebooks/: notebook.ipynb
raw_data/: players.json  rounds.json
raw_data/coach/: players.json
raw_data/stats/: all.json  players_opponents_stats.json  players_venues_stats.json
scripts/: 1PlayerScrape.py  2CoachScrape.py  5StatCollate.py  7StatDerivatives.py  9TeamStats.py  afl_json_scraper.py  cookie_persistence.py  cookies.txt  endpoint_extraction_extended.py  player_transfers_summary.py  scriptsExplanation.md  session_cookie_scrape.py  utils.py
src/: srcExplanation.md
src/processing/: 7StatDerivatives.py
src/scraper/: 1PlayerScrape.py
tests/: test_collate.py  test_e2e.py  testsExplanation.md
tests/1pipeline/: 1test_scrape.py  2test_collate.py  3test_derivatives.py  4test_team_stats.py
tests/2output/: 1test_output_files.py
(+479 files in other folders)
